# themoviedb-tests

./: .env  .env.example  .gitignore  README.md  project.py  pyproject.toml
notifications/: telegram.json.example
tests/: conftest.py
tests/api/: conftest.py  test_movie_rate.py  test_rate_movie.py  test_top_rated_movies.py
tests/api/schemas/: top_rated_movies.json  user_rated_movies.json
tests/ui/: conftest.py  test_favorites.py  test_login.py  test_search.py
themoviedb_tests/data/: movies.py  people.py  search_tabs.py
themoviedb_tests/pages/: login_page.py  movie_page.py  profile_page.py  search_page.py  settings_page.py
themoviedb_tests/utils/: __init__.py  api.py  attach.py  helpers.py  ui.py
