[tool.poetry]
name = "themoviedb-tests"
version = "0.1.0"
description = ""
authors = ["Ilya Tarasov <qailyatarasov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
allure-pytest = "^2.13.2"
requests = "^2.31.0"
curlify = "^2.2.1"
jsonschema = "^4.19.1"
pytest = "^7.4.2"
pydantic-settings = "^2.0.3"
selene = "2.0.0rc4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-vv --alluredir=allure-results --clean-alluredir"
